    Release 0.2.2
    - Experimental use of Lib::PDF
      -- Speed up the slowest test xt/filter-predictors_bulk.t
      -- Fast packing alternative for PDF::IO::Util
      For regression purposes, at this stage. Probably wont
      persue seriously until Rakudo has better JIT.

    Release 0.2.1
    - Renamed classes PDF::IO to PDF::IO::Util and PDF::IO::Input::*
      to PDF::IO::*.
    - Don't cache misses in PDF::DAO::Delegator
    - PDF::IO::Filter::Predictors now handles /BitsPerComponent < 8
    - Replace PDF::IO::Util resample() with pack(), unpack()

    Release 0.2.0
    - Renamed class PDF::DAO::Type::PDF to PDF. Restored module name
      to PDF

    Release 0.1.1
    - [PDF::Reader] now handles very large xref tables or streams (> 65K)
    - [PDF::DAO] use 'but' to apply roles to simple scalars, not 'does'.

    Release 0.1.0
    Renamed class namespace PDF::Storage -> PDF::IO. Used as the module
    name

    Release 0.0.9
    - class PDF::DAO::Stream is now based on PDF::DAO::Dict
    - withdrew non-standard PDF::DAO::Dict.new( $dict) positionals,
      in favour of PDF::DAO::Dict.new( :$dict ) named arguments.
      Same also for stream and array object constructors.
    - Use of siglless variables, where appropriate.
    - Revamped handing of PDF::DAO::Tie :entry and :index traits.
    - Fixes for PDF::Storage::Input::Str (byte-string reader) and
      PDF::Storage::Filter::Predictors

    Release 0.0.8
    - [PDF::DAO::Doc] .update( :diffs(...) ) - now supports JSON
    - Renamed classes
      -- PDF::DAO::Doc -> PDF::DAO::Type::PDF
      -- PDF::DAO::Storage::Crypt::Doc -> PDF::DAO::Storage::Crypt::PDF
    - [PDF::DAO::Type::XRef] renamed methods
      -- decode-to-stage2 -> decode-index
      -- encode-from-stage2 -> encode-index
    - [PDF::Writer]
      -- refactored 'write' multi method into node-specific methods
         (write-array, write-bool, ... etc)
      -- handle comments in write-op method