@@ -6,6 +6,6 @@
 [subrepo]
 	remote = git://github.com/p6-pdf/PDF-p6.git
 	branch = master
-	commit = 71c1f9e710cfae157138914dd275029ebc9e68ed
-	parent = 2736f4bba89046966f467958f1f07019ae3f1147
+	commit = e229cf7e779d31fadb32c835f492e49cdc0e226d
+	parent = 2b9875343f35a71934afc2e788adce53294c9aeb
 	cmdver = 0.4.0
