@@ -1,6 +1,9 @@
 PDF-p6
 ========
 
+ <a href="https://travis-ci.org/p6-pdf/PDF-p6"><img src="https://travis-ci.org/p6-pdf/PDF-p6.svg?branch=master"></a>
+ <a href="https://ci.appveyor.com/project/p6-pdf/PDF-p6/branch/master"><img src="https://ci.appveyor.com/api/projects/status/github/p6-pdf/PDF-p6?branch=master&passingText=Windows%20-%20OK&failingText=Windows%20-%20FAIL&pendingText=Windows%20-%20pending&svg=true"></a>
+
 ## Overview
 
 This is a low-level tool-kit for accessing and manipulating data from PDF documents.
